# LLM-Cost-Autopilot

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
config/: models.yaml  routing.yaml  verification.yaml
dashboard/: app.py
data/: prompts_labeled.jsonl  routing_failures.jsonl
docs/case-study/: CASE_STUDY.md  REPORT.md
docs/case-study/screenshots/: PLACE_DASHBOARD_SCREENSHOTS_HERE.md
docs/superpowers/plans/: 2026-05-02-phase1-unified-model-interface.md  2026-05-03-phase2-complexity-classifier.md  2026-05-04-phase3-async-quality-verification.md  2026-05-05-phase4-logging-and-dashboard.md  2026-05-06-phase5-fastapi-service.md  2026-05-06-phase6-portfolio-polish.md
scripts/: evaluate_routing.py  generate_report.py  label_prompts.py  load_test.py  retrain_from_failures.py  run_baseline.py  run_dashboard.sh  run_verification_demo.py  simulate_load.py  train_classifier.py
src/autopilot/: classifier.py  client.py  dataset.py  db.py  escalation.py  features.py  logging_router.py  models.py  quality.py  registry.py  router.py  routing.py  verifier.py  verifying_router.py
src/autopilot/api/: app.py  main.py  schemas.py  state.py
src/autopilot/providers/: anthropic_provider.py  base.py  ollama_provider.py  openai_provider.py
tests/: conftest.py  test_classifier.py  test_client.py  test_dataset.py  test_db.py  test_escalation.py  test_features.py  test_logging_router.py  test_models.py  test_quality.py  test_registry.py  test_router.py  test_routing.py  test_verifier.py  test_verifying_router.py
tests/integration/: test_baseline_prompts.py
tests/test_api/: conftest.py  test_completions.py  test_models_endpoint.py  test_routing_config_endpoint.py  test_stats_endpoint.py
tests/test_providers/: test_anthropic_provider.py  test_base.py  test_ollama_provider.py  test_openai_provider.py
