[project]
name = "autopilot"
version = "0.1.0"
description = "Routes LLM requests to the cheapest model that can handle them at acceptable quality."
readme = "README.md"
authors = [
    { name = "Yashwant", email = "yadavyeshwant6166@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "altair>=6.1.0",
    "anthropic>=0.97.0",
    "fastapi>=0.136.1",
    "joblib>=1.5.3",
    "openai>=2.33.0",
    "pandas>=3.0.2",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "streamlit>=1.57.0",
    "uvicorn[standard]>=0.46.0",
]

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-httpx>=0.36.2",
    "respx>=0.23.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: real-API tests (require OPENAI_API_KEY, opt-in via -m integration)",
]
addopts = "-ra --strict-markers"
